test/corpus/comments.txt
======================
Commented word with no spaces
======================
{{--nice--}}
---

(program (comment))

======================
Commented word with spaces
======================
{{-- nice --}}
---

(program (comment))

======================
Commented sentence with spaces
======================
{{-- This is a comment here --}}
---

(program (comment))

======================
Multiline comment
======================
{{-- 
Here is the first line!
Here is the second line!
--}}
---

(program (comment))

======================
Commented directive
======================
{{-- @dump('nice') --}}
---

(program (comment))

======================
Commented curly braces 
======================
{{-- {{ nice }} --}}
---

(program (comment))

======================
Comment with text
======================
{{-- some --}} text
---

(program
    (comment)
    (text))

======================
HTML with comment
======================
<div>
    {{-- <span>Some text</span> --}}
</div>
---

(program
    (text)
    (comment)
    (text))

======================
2 comments with text in between
======================
{{-- some --}} text {{-- here --}}
---

(program
    (comment)
    (text)
    (comment))

======================
HTML comment, textwire comment and @reserve
======================
<!-- comment -->
{{-- <h2>Nice</h2> --}}

@reserve('content')
---

(program
    (text)
    (comment)
    (text)
    (reserve_dir
        name: (str_expr)))

======================
@reserve with fallback value
======================
@reserve('content', 'fallback value')
---

(program
    (reserve_dir
        name: (str_expr)
        fallback: (str_expr)))
