test/corpus/directives/component.txt
==================
Inline @component without text
==================
@component('user')
---

(program
    (comp_dir
        name: (str_expr)))

==================
Inline @component with short object notation
==================
@component('book', { title })
---

(program
    (comp_dir
        name: (str_expr)
        argument: (obj_expr
            (pairs
                (pair
                    key: (ident_expr))))))

==================
Inline @component with full object notation
==================
@component("user", { name: "John" })
---

(program
    (comp_dir
        name: (str_expr)
        argument: (obj_expr
            (pairs
                (pair
                    key: (ident_expr)
                    val: (str_expr))))))

==================
Block @component no arguments
==================
@component('book')
    @slot<div>Nice</div>@end
@end
---

(program
    (comp_dir
        name: (str_expr)
        block: (block
            (text)
            (slot_dir
                block: (block (text)))
            (text))))

==================
Block @component with arguments
==================
@component('book', { name })
    <div>Nice</div>
@end
---

(program
    (comp_dir
        name: (str_expr)
        argument: (obj_expr
            (pairs
                (pair
                    key: (ident_expr))))
        block: (block
            (text))))

==================
Inline @component with block
==================
@component('book')<div>Nice</div>@end
---

(program
    (comp_dir
        name: (str_expr)
        block: (block
            (text))))

==================
Default @slot in @component
==================
@component('book')
    @slot
        TEST
    @end
@end
---

(program
    (comp_dir
        name: (str_expr)
        block: (block
            (text)
            (slot_dir
                block: (block
                    (text)))
            (text))))

==================
Named @slot in @component
==================
@component('book')
    @slot('title')
        <h1>Book title</h1>
    @end
@end
---

(program
    (comp_dir
        name: (str_expr)
        block: (block
            (text)
            (slot_dir
                name: (str_expr)
                block: (block (text)))
            (text))))

==================
Named @slotif in @component
==================
@component('book')
    @slotif(true, 'title')
        <h1>Book title</h1>
    @end
@end
---

(program
    (comp_dir
        name: (str_expr)
        block: (block
            (text)
            (slotif_dir
                cond: (bool_expr)
                name: (str_expr)
                block: (block
                    (text)))
            (text))))

==================
Default @slotif in @component
==================
@component('book')
    @slotif(false)
        <h1>Book</h1>
    @end
@end
---

(program
    (comp_dir
        name: (str_expr)
        block: (block
            (text)
            (slotif_dir
                cond: (bool_expr)
                block: (block (text)))
            (text))))

==================
Multiple @slotif in @component
==================
@component('book')
    @slotif(true)
        <h1>First</h1>
    @end

    @slotif(true, "name")
        <h2>Second</h2>
    @end
@end
---

(program
    (comp_dir
        name: (str_expr)
        block: (block
            (text)
            (slotif_dir
                cond: (bool_expr)
                block: (block (text)))
            (text)
            (slotif_dir
                cond: (bool_expr)
                name: (str_expr)
                block: (block (text)))
            (text))))

==================
Inline @slot in @component
==================
@component('book')@slotTEXT@end@end
---

(program
    (comp_dir
        name: (str_expr)
        block: (block
            (slot_dir
                block: (block
                    (text))))))

==================
Standalone @slot
==================
@slot
---

(program
    (slot_dir))

==================
Standalone @slot with name
==================
@slot('title')
---

(program
    (slot_dir
        name: (str_expr)))
