test/corpus/directives/control_flow.txt
==================
@break inside of @each
==================
@each(user in users) @break @end
---

(program
    (each_dir
        var: (ident_expr)
        array: (ident_expr)
        block: (block
            (text)
            (break_dir)
            (text))))

==================
Only @break inside of @each
==================
@each(user in users)@break@end
---

(program
    (each_dir
        var: (ident_expr)
        array: (ident_expr)
        block: (block
            (break_dir))))

==================
@continue inside of @each
==================
@each(user in users) @continue @end
---

(program
    (each_dir
        var: (ident_expr)
        array: (ident_expr)
        block: (block
            (text)
            (continue_dir)
            (text))))

==================
Only @continue inside of @each
==================
@each(user in users)@continue@end
---

(program
    (each_dir
        var: (ident_expr)
        array: (ident_expr)
        block: (block
            (continue_dir))))

==================
@breakIf inside of @each
==================
@each(user in users) @breakIf(true) @end
---

(program
    (each_dir
        var: (ident_expr)
        array: (ident_expr)
        block: (block
            (text)
            (breakif_dir
                cond: (bool_expr))
            (text))))

==================
Only @breakIf inside of @each
==================
@each(user in users)@breakIf(true)@end
---

(program
    (each_dir
        var: (ident_expr)
        array: (ident_expr)
        block: (block
            (breakif_dir
                cond: (bool_expr)))))

==================
Lowercased @breakIf inside of @each
==================
@each(user in users)@breakif(true)@end
---

(program
    (each_dir
        var: (ident_expr)
        array: (ident_expr)
        block: (block
            (breakif_dir
                cond: (bool_expr)))))

==================
Lowercased @continueif inside of @each
==================
@each(user in users)@continueif(false)@end
---

(program
    (each_dir
        var: (ident_expr)
        array: (ident_expr)
        block: (block
            (continueif_dir
                cond: (bool_expr)))))

==================
@continueIf inside of @each
==================
@each(user in users) @continueIf(false) @end
---

(program
    (each_dir
        var: (ident_expr)
        array: (ident_expr)
        block: (block
            (text)
            (continueif_dir
                cond: (bool_expr))
            (text))))

==================
Only @continueIf inside of @each
==================
@each(user in users)@continueIf(true)@end
---

(program
    (each_dir
        var: (ident_expr)
        array: (ident_expr)
        block: (block
            (continueif_dir
                cond: (bool_expr)))))
