test/corpus/directives/dump.txt
==================
@dump without text
==================
@dump(1)
---

(program 
    (dump_dir
        arguments: (argument_list
            (int_expr))))

==================
@dump inside HTML
==================
<ul>
    @dump(1)
</ul>
---

(program 
    (text)
    (dump_dir
        arguments: (argument_list
            (int_expr)))
    (text))

==================
Multiple @dump
==================
@dump(1.55)@dump("nice")
---

(program 
    (dump_dir
        arguments: (argument_list
            (float_expr)))
    (dump_dir
        arguments: (argument_list
            (str_expr))))

==================
@dump with multiple arguments
==================
@dump(user.name, count, items)
---

(program
    (dump_dir
        arguments: (argument_list
            (dot_expr
                left: (ident_expr)
                key: (ident_expr))
            (ident_expr)
            (ident_expr))))
