test/corpus/directives/each.txt
==================
Each statement without any block
==================
@each(name in names)@end
---

(program 
    (each_dir
        var: (ident_expr)
        array: (ident_expr)))

==================
Inline each statement with 1 HTML statement
==================
@each(name in [])<span>Nice</span>@end
---

(program 
    (each_dir
        var: (ident_expr)
        array: (arr_expr)
        block: (control_flow_block
            (text))))

==================
Multiline each statement with expression
==================
@each(name in names)
    <span>{{ value }}</span>
@end
---

(program 
    (each_dir
        var: (ident_expr)
        array: (ident_expr)
        block: (control_flow_block
            (text)
            (embedded
                (ident_expr))
            (text))))

==================
Each statement with escaped break
==================
@each(name in names)\@break@end
---

(program 
    (each_dir
        var: (ident_expr)
        array: (ident_expr)
        block: (control_flow_block
            (text))))

==================
Each statement with multiline block
==================
@each(name in names)
    Hello
    @break
@end
---

(program 
    (each_dir
        var: (ident_expr)
        array: (ident_expr)
        block: (control_flow_block
            (text)
            (break_dir)
            (text))))

==================
Each statement else block
==================
@each(name in names)
    hello
@else
    no hello
@end
---

(program 
    (each_dir
        var: (ident_expr)
        array: (ident_expr)
        block: (control_flow_block
            (text))
        else_block: (control_flow_block
            (text))))
