test/corpus/directives/for.txt
==================
@for without any block
==================
@for(i = 0; true; i++)@end
---

(program 
    (for_dir
        init: (assign_stmt
            name: (ident_expr)
            val: (int_expr))
        cond: (bool_expr)
        post: (postfix_stmt
            left: (ident_expr))))

==================
@for with HTML block
==================
@for(i = 0; true; i++)
    <span>Nice</span>
@end
---

(program 
    (for_dir
        init: (assign_stmt
            name: (ident_expr)
            val: (int_expr))
        cond: (bool_expr)
        post: (postfix_stmt
            left: (ident_expr))
        block: (control_flow_block
            (text))))

==================
@for with out HTML block
==================
@for(i = 0; i < 10; i++)@end
---

(program 
    (for_dir
        init: (assign_stmt
            name: (ident_expr)
            val: (int_expr))
        cond: (infix_expr
            (less
                left: (ident_expr)
                right: (int_expr)))
        post: (postfix_stmt
            left: (ident_expr))))

==================
@for with @break
==================
@for(i = 0; i < 10; i++)
    @break
    <span>nice</span>
@end
---

(program 
    (for_dir
        init: (assign_stmt
            name: (ident_expr)
            val: (int_expr))
        cond: (infix_expr
            (less
                left: (ident_expr)
                right: (int_expr)))
        post: (postfix_stmt
            left: (ident_expr))
        block: (control_flow_block
            (text)
            (break_dir)
            (text))))

==================
@for with @break and @continue inside of HTML
==================
<div>
    @for(i = 0; i < 10; i++)
        @break
        @continue
    @end
</div>
---

(program 
    (text)
    (for_dir
        init: (assign_stmt
            name: (ident_expr)
            val: (int_expr))
        cond: (infix_expr
            (less
                left: (ident_expr)
                right: (int_expr)))
        post: (postfix_stmt
            left: (ident_expr))
        block: (control_flow_block
            (text)
            (break_dir)
            (text)
            (continue_dir)
            (text)))
    (text))

==================
@for can be without init
==================
@for(; true; i++)@end
---

(program 
    (for_dir
        cond: (bool_expr)
        post: (postfix_stmt
            left: (ident_expr))))

==================
@for can be without cond
==================
@for(i = 0;; i++)@end
---

(program 
    (for_dir
        init: (assign_stmt
            name: (ident_expr)
            val: (int_expr))
        post: (postfix_stmt
            left: (ident_expr))))

==================
@for can be without post
==================
@for(i = 0; true;)@end
---

(program 
    (for_dir
        init: (assign_stmt
            name: (ident_expr)
            val: (int_expr))
        cond: (bool_expr)))

==================
@for can be empty
==================
@for(;;)@end
---

(program (for_dir))
