test/corpus/directives/if.txt
==================
Multiline @if
==================
@if(true)
    <span>Hello</span>
@end
---

(program
    (if_dir
        cond: (bool_expr)
        if_block: (block
            (text))))

==================
Inline @if
==================
@if (false)<span>Hello</span>@end
---

(program
    (if_dir
        cond: (bool_expr)
        if_block: (block
            (text))))

==================
@if with no body
==================
@if(false)@end
---

(program
    (if_dir
        cond: (bool_expr)))

==================
Single @elseif
==================
@if(true)
    <span>Hello</span>
@elseif(false)
    <span>Hi</span>
@end
---

(program
    (if_dir
        cond: (bool_expr)
        if_block: (block
            (text))
        elseif_block: (elseif_dir
            cond: (bool_expr)
            if_block: (block
                (text)))))

==================
Multiple @elseif
==================
@if(true)
    <span>Hello</span>
@elseif(false)
    <span>Bye bye</span>
@elseif(true)
    <span>Hi</span>
@end
---

(program
    (if_dir
        cond: (bool_expr)
        if_block: (block
            (text))
        elseif_block: (elseif_dir
            cond: (bool_expr)
            if_block: (block
                (text)))
        elseif_block: (elseif_dir
                cond: (bool_expr)
                if_block: (block
                    (text)))))

==================
Single @else
==================
@if(true)
    <span>Hello</span>
@else
    <span>Hi</span>
@end
---

(program
    (if_dir
        cond: (bool_expr)
        if_block: (block
            (text))
        else_block: (else_dir
            (block
                (text)))))
