test/corpus/directives/insert.txt
==================
Inline @insert inside HTML
==================
<head>
    <meta charset="UTF-8">
    @insert('title', 'My page')
</head>
---

(program
    (text)
    (insert_dir
        name: (str_expr)
        val: (str_expr))
    (text))

==================
@insert with block
==================
<head>
    <meta charset="UTF-8">
    @insert('title')
        <title>My page</title>
    @end
</head>
---

(program
    (text)
    (insert_dir
        name: (str_expr)
        block: (block
            (text)))
    (text))

==================
@insert with expression value
==================
@insert('key', user.name)
---

(program
    (insert_dir
        name: (str_expr)
        val: (dot_expr
            left: (ident_expr)
            key: (ident_expr))))
