test/corpus/directives/use.txt
==================
@use directive statement
==================
@use('~main')
---

(program
    (use_dir
        name: (str_expr)))

==================
@use statement with empty string
==================
@use('')
---

(program
    (use_dir
        name: (str_expr)))
