test/corpus/literals.txt
==================
2 chunks with boolean expressions
==================
{{ true; false }}
---

(program 
    (embedded
        (bool_expr)
        (bool_expr)))

==================
1 chunk with boolean expression
==================
{{ true }}
---

(program 
    (embedded
        (bool_expr)))

==================
Array expression with 3 items
==================
{{ [1, "two", false] }}
---

(program 
    (embedded
        (arr_expr
            (int_expr)
            (str_expr)
            (bool_expr))))

==================
String expression
==================
{{ 'Hello, world!' }}
---

(program 
    (embedded
        (str_expr)))

==================
Short object expr with one key
==================
{{ { name } }}
---

(program 
    (embedded
        (obj_expr
            (pairs
                (pair
                    key: (ident_expr))))))

==================
Full object expr with one element
==================
{{ { name: "Serhii" } }}
---

(program 
    (embedded
        (obj_expr
            (pairs
                (pair
                    key: (ident_expr)
                    val: (str_expr))))))
