test/corpus/statements.txt
==================
Assign statement
==================
{{ name = "Anna" }}
---

(program
    (embedded
        (assign_stmt
            name: (ident_expr)
            val: (str_expr))))

==================
Assign with trailing commas
==================
{{ items = [{ href: '/', }, { href: '/posts', }] }}
---

(program
    (embedded
        (assign_stmt
            name: (ident_expr)
            val: (arr_expr
                (obj_expr
                    (pairs
                        (pair
                            key: (ident_expr)
                            val: (str_expr))))
                (obj_expr
                    (pairs
                        (pair
                            key: (ident_expr)
                            val: (str_expr))))))))

==================
Increment postfix statement
==================
{{ num++ }}
---

(program
    (embedded
        (postfix_stmt
            left: (ident_expr))))

==================
Decrement postfix statement
==================
{{ num-- }}
---

(program
    (embedded
        (postfix_stmt
            left: (ident_expr))))
